# speeddeploy

./: .gitignore  CHANGELOG.md  README.md  bootstrap_tests.py  cmd.md  commit.bat  pyproject.toml  requirements-dev.txt  requirements.txt  speeddeploy.bat  speeddeploy.sh
.github/workflows/: ci.yml
docs/: README.md  database-backups.md  django-apache.md  django-nginx.md  installation.md  releases-rollback.md  ssh-deploy.md  ssl-certbot.md  troubleshooting.md
speeddeploy/: __init__.py  __main__.py  apache.py  certbot.py  cli.py  config.py  deployer.py  django.py  gunicorn.py  paths.py  runner.py  ssl.py  system.py
speeddeploy/templates/: apache.conf.j2  gunicorn.service.j2  nginx.conf.j2
speeddeploy/v2/: __init__.py  __main__.py  backup.py  cli.py  engine.py  envfile.py  executor.py  health.py  models.py  releases.py  state.py
tests/: __init__.py  support.py  test_audit.py  test_backup.py  test_config_v1.py  test_diagnose.py  test_envfile.py  test_executor_dry_run.py  test_healthcheck.py  test_plan.py  test_ssl.py  test_state_and_rollback.py  test_templates.py  test_v2_models.py
