[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speeddeploy"
version = "0.5.0"
description = "Django deployment CLI with local Linux and SSH backends, Apache, Nginx, and Gunicorn"
readme = "README.md"
authors = [
    { name = "Sidiki", email = "osaadoukou@gmail.com" }
]
dependencies = [
    "typer>=0.12,<1.0",
    "pyyaml>=6,<7",
    "jinja2>=3,<4",
    "rich>=13,<15"
]
requires-python = ">=3.10"

[project.scripts]
speeddeploy = "speeddeploy.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["speeddeploy*"]

[tool.setuptools.package-data]
speeddeploy = ["templates/*.j2"]
